	   of a different dimension).
       12. Exited tabs are now correctly held. Output from them is not lost
	   even if they exit very quickly.
       13. Rewrote the -ufbg and focus fading code completely. Now works
	   correctly if tabs are switched on on unfocussed window, or if the
	   bg is changed (via an escape sequence) from an inactive tab /
	   unfocussed window.

    * Enhancements:
	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
	   anything else!
	1. Reduced memory footprint by roughly 5kb.
	2. Converted all source files to use the standard ts=8 for easier
	   diffing / online viewing.
	3. Added a --focusDelay option to collect focus changes events over an
	   interval. This is mainly to work around a bug in some window
	   managers.
	4. Xft bold fonts now actually use the bold font, instead of over
	   striking.
	5. Added a --xftBoldWeight option to control the weight of the Xft
	   bold font.
	6. Made --holdExit a string option, so that tabs can be held based on
	   the exit status of the child.
	7. Added --holdExitTitle and --holdExitText options to specify the
	   title of an exited tab, and the text printed in the tab of an
	   exited child process.
	8. Removed the "jumpScroll" option, and replaced it with
	   --refreshLimit and --skipPages (see man page).

Jimmy Zhou <jimmyzhou@users.sourceforge.net>
    * Bug Fixes:
	1. Fix mrxvtset.pl as pointed by Avi Yagodnick.
	2. Fix mouse button 4/5 behavior. Make it the same as firefox
	   as pointed out by Yoshihiko Kashio.
	3. Fix reverse video when foreground/background colors are not
	   defined. Thanks to Yoshihiko Kashio.
	4. Disable slave macros in the macro chains if the first (master)
	   macro is defined as dummy.
	5. Fix off-focus fading. Thanks to Ken Zalewski for the report.
	6. Add macros to check and set options. Extend the number of 
	   options.
	7. Add macros to check and unset X resources.
	8. Add macros to check and set NULL pointers.